# MedInsider

./: .gitignore  Makefile  README.md  croissant.json  pyproject.toml
code/scripts/: audit_atc_reference_actions.py  build_phaseA_artifacts.py  estimate_rate_limit_feasibility.py  generate_v2_paired_dataset.py  run_phase1_demo.py  run_phase2_pipeline.py  run_phase4_experiments.py  run_phaseB_metric_validation.py  run_phaseB_metric_validation_FLOWCHART.md  run_phaseC_robustness.py  score_phase3_demo.py  verify_public_coverage.py
code/src/medinsider/: scoring.py  (+7 more)
code/tests/: test_api_wrapper_usage.py  test_audit_atc_reference_actions.py  test_capability_control.py  test_cot_capture.py  test_dual_judge.py  test_fhir_scorer.py  test_fhir_state.py  test_fhir_tools.py  test_gemini_wrapper.py  test_hf_backup.py  test_knowledge_probe.py  test_local_inference_wrapper.py  test_phase3_scoring.py  test_phase4_v2_experiments.py  test_rate_limit_estimator.py  test_robustness.py
code_and_benchmark/: DATASHEET.md  DATA_LICENSE  Makefile  README.md  croissant.json
code_and_benchmark/docs/: asset_licenses.md  citation_metadata_notes.md
docs/: asset_licenses.md  citation_metadata_notes.md
docs/design/: pressure_realism_design.md
docs/paper/: claims_assumptions.md  ethics_statement.md  final_compute_appendix_seven_model.csv  final_compute_appendix_seven_model.md  final_table3_model_caveats.csv  final_table3_seven_model_results.csv  final_table6_coding_probe.csv  final_table7_mitigation.csv  limitations.md  model_panel.md  reproducibility_checklist.md
docs/protocol/: PROTOCOL.md
(+594 files in other folders)
